@@ -45,6 +45,12 @@ url into a category index. This check already happens when creating a new catego
 The Find Story button for a Lead In element of a story now works in the Chrome browser.
 [Brad Oaks]
 
+=item * 
+
+When Bulk Editting something with a C<< <p> >> tag as a separator,
+we now strip off any remaining stray closing C<< </p> >> tags as
+well. [Michael Peters]
+
 =back
 
 =head2 3.13 - Apr, 5 2011
